# rechnungslosung

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
losung/: aufgabe1.py  aufgabe2.py  utils.py
rechnungen/: rechnung-objekt-3.py  rechnung.py  rechnung1.py  rechnung2.py  rechnung3.py  rechnung4.py
