[project]
name = "rechnugen-ubungsaufgabe"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "abdelrahman abounida", email = "abdelrahmanaboneda@gmail.com"},
]
dependencies = ["langchain-core>=0.3.49", "langchain-google-genai>=2.1.2", "langchain-community>=0.3.20", "loguru>=0.7.3", "python-dotenv>=1.1.0"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
